service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-kube-example-service
  namespace: default
spec:
  selector:
    app: go-kube-example
  ports:
    - port: 8080
